Bug 88039 - Send Queued Messages, Send message not cleared
Summary: Send Queued Messages, Send message not cleared
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandrake RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-08-25 16:29 UTC by Thomas
Modified: 2014-08-13 13:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas 2004-08-25 16:29:25 UTC
Version:            (using KDE KDE 3.2.3)
Installed from:    Mandrake RPMs
OS:                Linux

Kontact/Kmail/Send Queued Messages/continue sending/OK
Message sending fails. Try all messages in queue.
After all messages fail, then get box that has
OK box to click. Click OK. 
This is the error:
 The "Sending..." line at the bottom of the screen
is not cleared after OK is clicked.
Comment 1 Martin Koller 2009-09-03 22:45:42 UTC
works in KDE 4.3
Comment 2 David Edmundson 2014-08-13 13:07:15 UTC
Git commit 1d83cc0baff815fff0859e313f83b0c0b5e256fe by David Edmundson.
Committed on 13/08/2014 at 13:07.
Pushed by davidedmundson into branch 'master'.

Guard against Plasma::SVG giving us null pixmaps

On some themes Plasma::SVG gives empty pixmaps. Loading a null QImage to
an atlas texture causes a crash in old versions of Qt.

Guard against it.
Reviewed-by: Martin Klapetek

M  +8    -0    src/declarativeimports/core/svgitem.cpp

http://commits.kde.org/plasma-framework/1d83cc0baff815fff0859e313f83b0c0b5e256fe
Comment 3 David Edmundson 2014-08-13 13:11:00 UTC
I clearly pushed a commit to the wrong bug here sorry for the noise